--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,7 @@ footer a {
 /* WHAT WE DO*/
 .intro {
   text-align: center;
+  padding: 45px;
 }
 .intro p {
   line-height: 1.7;
@@ -124,6 +125,7 @@ footer a {
 .steps { 
   text-align: center;
   background: #fce138;
+  padding: 45px;
 }
 .section-title {
   font-size: 55px;
@@ -161,6 +163,7 @@ footer a {
 /*Trainers*/
 .trainers {
   text-align: center;
+  padding-top: 45px;
 }
 .trainer {
   width: 900px;
@@ -205,4 +208,55 @@ footer a {
   margin-top: 15px;
   margin-left: 35px;
   margin-right: 35px;
+}
+/* REACH OUT STYLES START */
+.contact {
+  text-align: center;
+  background: #024e76;
+  padding: 45px;
+}
+.contact h2 {
+  color: #fce138;
+}
+.section-title h2 {
+  font-size: 55px;
+  display: inline-block;
+  padding: 0px 100px 20px 100px;
+  border-bottom: 3px solid;
+  margin-bottom: 35px;
+  color: #024e76;
+}
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+.contact-info a {
+  color: #fce138;
+}
+/* REACH OUT STYLES END */
+
+/* secondary page hero */
+.hero-secondary {
+  margin: 20px;
+  background-color: black;
+  font-size: 20px;
+  color: red;
 }
