--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header nav ul li a {
 }
 footer {
   background: #fce138;
-  width: 100%;
+  width: auto;
   padding: 40px 35px;
 }
 footer h2 {
@@ -252,11 +252,3 @@ footer a {
   color: #fce138;
 }
 /* REACH OUT STYLES END */
-
-/* secondary page hero */
-.hero-secondary {
-  margin: 20px;
-  background-color: black;
-  font-size: 20px;
-  color: red;
-}
